create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -766,6 +766,11 @@ a {
   display: flex;
   margin: auto;
 }
+@media (min-width: 992px) {
+  .cid-t5NJRwZFYz .container {
+    flex-wrap: nowrap;
+  }
+}
 .cid-t5NJRwZFYz .iconfont-wrapper {
   color: #000000 !important;
   font-size: 1.5rem;
@@ -1140,21 +1145,6 @@ a {
     text-align: center;
   }
 }
-.cid-t5NOgzsrNm {
-  background-color: #000000;
-}
-.cid-t5NOgzsrNm .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-t5NOgzsrNm .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-}
 .cid-t5NOm0udKa .mbr-section-title {
   text-align: center;
 }
@@ -1169,6 +1159,54 @@ a {
   .cid-t5NOm0udKa .mbr-text {
     text-align: center;
   }
+}
+.cid-t5NOgzsrNm {
+  background-image: url("../../../assets/images/background9.jpg");
+}
+.cid-t5NOgzsrNm .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-t5NOgzsrNm .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-t60fsLIz7i {
+  background-image: url("../../../assets/images/screen-shot-2022-05-14-at-8.35.11-pm-2000x1250.png");
+}
+.cid-t60fsLIz7i .mbr-section-title {
+  text-align: center;
+}
+.cid-t60fsLIz7i .mbr-text,
+.cid-t60fsLIz7i .mbr-section-btn {
+  color: #232323;
+  text-align: center;
+}
+@media (max-width: 991px) {
+  .cid-t60fsLIz7i .mbr-section-title,
+  .cid-t60fsLIz7i .mbr-section-btn,
+  .cid-t60fsLIz7i .mbr-text {
+    text-align: center;
+  }
+}
+.cid-t60fc2LBsD {
+  background-image: url("../../../assets/images/background9.jpg");
+}
+.cid-t60fc2LBsD .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-t60fc2LBsD .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
 .cid-t605EtHr3q {
   padding-top: 6rem;
