create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -702,14 +702,16 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-t5NJRwZFYz {
+.cid-t63gn8Nh7k {
   z-index: 1000;
   width: 100%;
+  position: relative;
+  min-height: 60px;
 }
-.cid-t5NJRwZFYz nav.navbar {
+.cid-t63gn8Nh7k nav.navbar {
   position: fixed;
 }
-.cid-t5NJRwZFYz .dropdown-item:before {
+.cid-t63gn8Nh7k .dropdown-item:before {
   font-family: Moririse2 !important;
   content: "\e966";
   display: inline-block;
@@ -726,123 +728,129 @@ a {
   transform: scale(0, 1);
   transition: all 0.25s ease-in-out;
 }
-.cid-t5NJRwZFYz .dropdown-menu {
+.cid-t63gn8Nh7k .dropdown-menu {
   padding: 0;
   border-radius: 4px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
 }
-.cid-t5NJRwZFYz .dropdown-item {
+.cid-t63gn8Nh7k .dropdown-item {
   border-bottom: 1px solid #e6e6e6;
 }
-.cid-t5NJRwZFYz .dropdown-item:hover,
-.cid-t5NJRwZFYz .dropdown-item:focus {
+.cid-t63gn8Nh7k .dropdown-item:hover,
+.cid-t63gn8Nh7k .dropdown-item:focus {
   background: #ffffff !important;
   color: white !important;
 }
-.cid-t5NJRwZFYz .dropdown-item:hover span {
+.cid-t63gn8Nh7k .dropdown-item:hover span {
   color: white;
 }
-.cid-t5NJRwZFYz .dropdown-item:first-child {
+.cid-t63gn8Nh7k .dropdown-item:first-child {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
-.cid-t5NJRwZFYz .dropdown-item:last-child {
+.cid-t63gn8Nh7k .dropdown-item:last-child {
   border-bottom: none;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-.cid-t5NJRwZFYz .nav-dropdown .link {
+.cid-t63gn8Nh7k .nav-dropdown .link {
   padding: 0 0.3em !important;
   margin: 0.667em 1em !important;
 }
-.cid-t5NJRwZFYz .nav-dropdown .link.dropdown-toggle::after {
+.cid-t63gn8Nh7k .nav-dropdown .link.dropdown-toggle::after {
   margin-left: 0.5rem;
   margin-top: 0.2rem;
 }
-.cid-t5NJRwZFYz .nav-link {
+.cid-t63gn8Nh7k .nav-link {
   position: relative;
 }
-.cid-t5NJRwZFYz .container {
+.cid-t63gn8Nh7k .container {
   display: flex;
   margin: auto;
 }
-.cid-t5NJRwZFYz .iconfont-wrapper {
+@media (min-width: 992px) {
+  .cid-t63gn8Nh7k .container {
+    flex-wrap: nowrap;
+  }
+}
+.cid-t63gn8Nh7k .iconfont-wrapper {
   color: #000000 !important;
   font-size: 1.5rem;
   padding-right: 0.5rem;
 }
-.cid-t5NJRwZFYz .dropdown-menu,
-.cid-t5NJRwZFYz .navbar.opened {
+.cid-t63gn8Nh7k .dropdown-menu,
+.cid-t63gn8Nh7k .navbar.opened {
   background: #0a0c0e !important;
 }
-.cid-t5NJRwZFYz .nav-item:focus,
-.cid-t5NJRwZFYz .nav-link:focus {
+.cid-t63gn8Nh7k .nav-item:focus,
+.cid-t63gn8Nh7k .nav-link:focus {
   outline: none;
 }
-.cid-t5NJRwZFYz .dropdown .dropdown-menu .dropdown-item {
+.cid-t63gn8Nh7k .dropdown .dropdown-menu .dropdown-item {
   width: auto;
   transition: all 0.25s ease-in-out;
 }
-.cid-t5NJRwZFYz .dropdown .dropdown-menu .dropdown-item::after {
+.cid-t63gn8Nh7k .dropdown .dropdown-menu .dropdown-item::after {
   right: 0.5rem;
 }
-.cid-t5NJRwZFYz .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+.cid-t63gn8Nh7k .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
   margin-right: 0.5rem;
   vertical-align: sub;
 }
-.cid-t5NJRwZFYz .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+.cid-t63gn8Nh7k .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
   display: inline-block;
   transform: scale(1, 1);
   transition: all 0.25s ease-in-out;
 }
-.cid-t5NJRwZFYz .collapsed .dropdown-menu .dropdown-item:before {
+.cid-t63gn8Nh7k .collapsed .dropdown-menu .dropdown-item:before {
   display: none;
 }
-.cid-t5NJRwZFYz .collapsed .dropdown .dropdown-menu .dropdown-item {
+.cid-t63gn8Nh7k .collapsed .dropdown .dropdown-menu .dropdown-item {
   padding: 0.235em 1.5em 0.235em 1.5em !important;
   transition: none;
   margin: 0 !important;
 }
-.cid-t5NJRwZFYz .navbar {
+.cid-t63gn8Nh7k .navbar {
   min-height: 70px;
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
   background: #0a0c0e;
 }
-.cid-t5NJRwZFYz .navbar.opened {
+.cid-t63gn8Nh7k .navbar.opened {
   transition: all 0.3s;
 }
-.cid-t5NJRwZFYz .navbar .dropdown-item {
+.cid-t63gn8Nh7k .navbar .dropdown-item {
   padding: 0.5rem 1.8rem;
 }
-.cid-t5NJRwZFYz .navbar .navbar-logo img {
+.cid-t63gn8Nh7k .navbar .navbar-logo img {
   width: auto;
 }
-.cid-t5NJRwZFYz .navbar .navbar-collapse {
+.cid-t63gn8Nh7k .navbar .navbar-collapse {
   justify-content: flex-end;
   z-index: 1;
 }
-.cid-t5NJRwZFYz .navbar.collapsed {
+.cid-t63gn8Nh7k .navbar.collapsed {
   justify-content: center;
 }
-.cid-t5NJRwZFYz .navbar.collapsed .nav-item .nav-link::before {
+.cid-t63gn8Nh7k .navbar.collapsed .nav-item .nav-link::before {
   display: none;
 }
-.cid-t5NJRwZFYz .navbar.collapsed.opened .dropdown-menu {
+.cid-t63gn8Nh7k .navbar.collapsed.opened .dropdown-menu {
   top: 0;
 }
 @media (min-width: 992px) {
-  .cid-t5NJRwZFYz .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 5.2rem);
+  .cid-t63gn8Nh7k .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 5.5rem);
   }
 }
-.cid-t5NJRwZFYz .navbar.collapsed .dropdown-menu .dropdown-submenu {
+.cid-t63gn8Nh7k .navbar.collapsed .dropdown-menu .dropdown-submenu {
   left: 0 !important;
 }
-.cid-t5NJRwZFYz .navbar.collapsed .dropdown-menu .dropdown-item:after {
+.cid-t63gn8Nh7k .navbar.collapsed .dropdown-menu .dropdown-item:after {
   right: auto;
 }
-.cid-t5NJRwZFYz .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+.cid-t63gn8Nh7k .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
   margin-left: 0.5rem;
   margin-top: 0.2rem;
   border-top: 0.35em solid;
@@ -851,33 +859,33 @@ a {
   border-bottom: 0;
   top: 41%;
 }
-.cid-t5NJRwZFYz .navbar.collapsed ul.navbar-nav li {
+.cid-t63gn8Nh7k .navbar.collapsed ul.navbar-nav li {
   margin: auto;
 }
-.cid-t5NJRwZFYz .navbar.collapsed .dropdown-menu .dropdown-item {
+.cid-t63gn8Nh7k .navbar.collapsed .dropdown-menu .dropdown-item {
   padding: 0.25rem 1.5rem;
   text-align: center;
 }
-.cid-t5NJRwZFYz .navbar.collapsed .icons-menu {
+.cid-t63gn8Nh7k .navbar.collapsed .icons-menu {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 @media (max-width: 991px) {
-  .cid-t5NJRwZFYz .navbar .nav-item .nav-link::before {
+  .cid-t63gn8Nh7k .navbar .nav-item .nav-link::before {
     display: none;
   }
-  .cid-t5NJRwZFYz .navbar.opened .dropdown-menu {
+  .cid-t63gn8Nh7k .navbar.opened .dropdown-menu {
     top: 0;
   }
-  .cid-t5NJRwZFYz .navbar .dropdown-menu .dropdown-submenu {
+  .cid-t63gn8Nh7k .navbar .dropdown-menu .dropdown-submenu {
     left: 0 !important;
   }
-  .cid-t5NJRwZFYz .navbar .dropdown-menu .dropdown-item:after {
+  .cid-t63gn8Nh7k .navbar .dropdown-menu .dropdown-item:after {
     right: auto;
   }
-  .cid-t5NJRwZFYz .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  .cid-t63gn8Nh7k .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
     margin-left: 0.5rem;
     margin-top: 0.2rem;
     border-top: 0.35em solid;
@@ -886,42 +894,42 @@ a {
     border-bottom: 0;
     top: 40%;
   }
-  .cid-t5NJRwZFYz .navbar .navbar-logo img {
+  .cid-t63gn8Nh7k .navbar .navbar-logo img {
     height: 3rem !important;
   }
-  .cid-t5NJRwZFYz .navbar ul.navbar-nav li {
+  .cid-t63gn8Nh7k .navbar ul.navbar-nav li {
     margin: auto;
   }
-  .cid-t5NJRwZFYz .navbar .dropdown-menu .dropdown-item {
+  .cid-t63gn8Nh7k .navbar .dropdown-menu .dropdown-item {
     padding: 0.25rem 1.5rem !important;
     text-align: center;
   }
-  .cid-t5NJRwZFYz .navbar .navbar-brand {
+  .cid-t63gn8Nh7k .navbar .navbar-brand {
     flex-shrink: initial;
     flex-basis: auto;
     word-break: break-word;
     padding-right: 2rem;
   }
-  .cid-t5NJRwZFYz .navbar .navbar-toggler {
+  .cid-t63gn8Nh7k .navbar .navbar-toggler {
     flex-basis: auto;
   }
-  .cid-t5NJRwZFYz .navbar .icons-menu {
+  .cid-t63gn8Nh7k .navbar .icons-menu {
     padding-left: 0;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
 }
-.cid-t5NJRwZFYz .navbar.navbar-short {
+.cid-t63gn8Nh7k .navbar.navbar-short {
   min-height: 60px;
 }
-.cid-t5NJRwZFYz .navbar.navbar-short .navbar-logo img {
+.cid-t63gn8Nh7k .navbar.navbar-short .navbar-logo img {
   height: 2.5rem !important;
 }
-.cid-t5NJRwZFYz .navbar.navbar-short .navbar-brand {
+.cid-t63gn8Nh7k .navbar.navbar-short .navbar-brand {
   min-height: 60px;
   padding: 0;
 }
-.cid-t5NJRwZFYz .navbar-brand {
+.cid-t63gn8Nh7k .navbar-brand {
   min-height: 70px;
   flex-shrink: 0;
   align-items: center;
@@ -931,44 +939,44 @@ a {
   word-break: break-word;
   z-index: 1;
 }
-.cid-t5NJRwZFYz .navbar-brand .navbar-caption {
+.cid-t63gn8Nh7k .navbar-brand .navbar-caption {
   line-height: inherit !important;
 }
-.cid-t5NJRwZFYz .navbar-brand .navbar-logo a {
+.cid-t63gn8Nh7k .navbar-brand .navbar-logo a {
   outline: none;
 }
-.cid-t5NJRwZFYz .dropdown-item.active,
-.cid-t5NJRwZFYz .dropdown-item:active {
+.cid-t63gn8Nh7k .dropdown-item.active,
+.cid-t63gn8Nh7k .dropdown-item:active {
   background-color: transparent;
 }
-.cid-t5NJRwZFYz .navbar-expand-lg .navbar-nav .nav-link {
+.cid-t63gn8Nh7k .navbar-expand-lg .navbar-nav .nav-link {
   padding: 0;
 }
-.cid-t5NJRwZFYz .nav-dropdown .link.dropdown-toggle {
+.cid-t63gn8Nh7k .nav-dropdown .link.dropdown-toggle {
   margin-right: 1.667em;
 }
-.cid-t5NJRwZFYz .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+.cid-t63gn8Nh7k .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
   margin-right: 0;
   padding: 0.667em 1.667em;
 }
-.cid-t5NJRwZFYz .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+.cid-t63gn8Nh7k .navbar.navbar-expand-lg .dropdown .dropdown-menu {
   background: #0a0c0e;
 }
-.cid-t5NJRwZFYz .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+.cid-t63gn8Nh7k .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
   left: 100%;
 }
-.cid-t5NJRwZFYz .navbar .dropdown.open > .dropdown-menu {
+.cid-t63gn8Nh7k .navbar .dropdown.open > .dropdown-menu {
   display: block;
 }
-.cid-t5NJRwZFYz ul.navbar-nav {
+.cid-t63gn8Nh7k ul.navbar-nav {
   flex-wrap: wrap;
 }
-.cid-t5NJRwZFYz .navbar-buttons {
+.cid-t63gn8Nh7k .navbar-buttons {
   text-align: center;
   min-width: 170px;
 }
-.cid-t5NJRwZFYz button.navbar-toggler {
+.cid-t63gn8Nh7k button.navbar-toggler {
   outline: none;
   width: 31px;
   height: 20px;
@@ -977,62 +985,62 @@ a {
   position: relative;
   align-self: center;
 }
-.cid-t5NJRwZFYz button.navbar-toggler .hamburger span {
+.cid-t63gn8Nh7k button.navbar-toggler .hamburger span {
   position: absolute;
   right: 0;
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
-.cid-t5NJRwZFYz button.navbar-toggler .hamburger span:nth-child(1) {
+.cid-t63gn8Nh7k button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
   transition: all 0.2s;
 }
-.cid-t5NJRwZFYz button.navbar-toggler .hamburger span:nth-child(2) {
+.cid-t63gn8Nh7k button.navbar-toggler .hamburger span:nth-child(2) {
   top: 8px;
   transition: all 0.15s;
 }
-.cid-t5NJRwZFYz button.navbar-toggler .hamburger span:nth-child(3) {
+.cid-t63gn8Nh7k button.navbar-toggler .hamburger span:nth-child(3) {
   top: 8px;
   transition: all 0.15s;
 }
-.cid-t5NJRwZFYz button.navbar-toggler .hamburger span:nth-child(4) {
+.cid-t63gn8Nh7k button.navbar-toggler .hamburger span:nth-child(4) {
   top: 16px;
   transition: all 0.2s;
 }
-.cid-t5NJRwZFYz nav.opened .hamburger span:nth-child(1) {
+.cid-t63gn8Nh7k nav.opened .hamburger span:nth-child(1) {
   top: 8px;
   width: 0;
   opacity: 0;
   right: 50%;
   transition: all 0.2s;
 }
-.cid-t5NJRwZFYz nav.opened .hamburger span:nth-child(2) {
+.cid-t63gn8Nh7k nav.opened .hamburger span:nth-child(2) {
   transform: rotate(45deg);
   transition: all 0.25s;
 }
-.cid-t5NJRwZFYz nav.opened .hamburger span:nth-child(3) {
+.cid-t63gn8Nh7k nav.opened .hamburger span:nth-child(3) {
   transform: rotate(-45deg);
   transition: all 0.25s;
 }
-.cid-t5NJRwZFYz nav.opened .hamburger span:nth-child(4) {
+.cid-t63gn8Nh7k nav.opened .hamburger span:nth-child(4) {
   top: 8px;
   width: 0;
   opacity: 0;
   right: 50%;
   transition: all 0.2s;
 }
-.cid-t5NJRwZFYz .navbar-dropdown {
+.cid-t63gn8Nh7k .navbar-dropdown {
   padding: 0 1rem;
   position: fixed;
 }
-.cid-t5NJRwZFYz a.nav-link {
+.cid-t63gn8Nh7k a.nav-link {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.cid-t5NJRwZFYz .icons-menu {
+.cid-t63gn8Nh7k .icons-menu {
   flex-wrap: nowrap;
   display: flex;
   justify-content: center;
@@ -1042,34 +1050,16 @@ a {
   text-align: center;
 }
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .cid-t5NJRwZFYz .navbar {
+  .cid-t63gn8Nh7k .navbar {
     height: 70px;
   }
-  .cid-t5NJRwZFYz .navbar.opened {
+  .cid-t63gn8Nh7k .navbar.opened {
     height: auto;
   }
-  .cid-t5NJRwZFYz .nav-item .nav-link:hover::before {
+  .cid-t63gn8Nh7k .nav-item .nav-link:hover::before {
     width: 175%;
     max-width: calc(100% + 2rem);
     left: -1rem;
-  }
-}
-.cid-t5NN59OcgM {
-  background-image: url("../../../assets/images/teaser-2000x1125.jpg");
-}
-.cid-t5NN59OcgM .mbr-section-title {
-  text-align: center;
-}
-.cid-t5NN59OcgM .mbr-text,
-.cid-t5NN59OcgM .mbr-section-btn {
-  color: #ffffff;
-  text-align: center;
-}
-@media (max-width: 991px) {
-  .cid-t5NN59OcgM .mbr-section-title,
-  .cid-t5NN59OcgM .mbr-section-btn,
-  .cid-t5NN59OcgM .mbr-text {
-    text-align: center;
   }
 }
 .cid-t5NNhgloaj .mbr-section-title {
