--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1082,17 +1082,44 @@ section.lazy-placeholder:after {
 }
 .cid-t616PmGNlB .mbr-text,
 .cid-t616PmGNlB .mbr-section-btn {
-  color: #149dcc;
+  color: #efefef;
 }
 .cid-t617qfHy33 {
   background-image: url("../../../assets/images/screen-shot-2022-05-14-at-9.42.07-pm-1673x941.png");
 }
 .cid-t618ygX0ae {
-  background-color: #000000;
+  background-image: url("../../../assets/images/screen-shot-2022-05-14-at-7.29.00-pm-2000x1250.png");
 }
 .cid-t618ygX0ae .mbr-text,
 .cid-t618ygX0ae .mbr-section-btn {
-  color: #149dcc;
+  color: #ffffff;
+}
+.cid-t66cRTiCs0 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/background1-1600x1067.jpg");
+}
+.cid-t66cRTiCs0 .testimonial-text {
+  font-style: italic;
+  font-weight: 300;
+}
+.cid-t66cRTiCs0 .mbr-author-name {
+  font-weight: bold;
+}
+.cid-t66cRTiCs0 .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-t66cRTiCs0 .mbr-figure,
+  .cid-t66cRTiCs0 img {
+    max-height: 300px;
+    width: auto;
+    margin: auto;
+  }
+  .cid-t66cRTiCs0 .media-content {
+    padding-top: 1.5rem !important;
+  }
 }
 .cid-t61bu9Mz0l {
   padding-top: 0px;
