--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1075,7 +1075,7 @@ section.lazy-placeholder:after {
   color: #ffffff !important;
 }
 .cid-qTkA127IK8 {
-  background-image: url("../../../assets/images/teaser-2000x1125.jpg");
+  background-image: url("../../../assets/images/screen-shot-2022-05-14-at-8.40.13-pm-1564x880.png");
 }
 .cid-t616PmGNlB {
   background-image: url("../../../assets/images/screen-shot-2022-05-14-at-9.17.11-pm-1805x756.png");
@@ -1175,8 +1175,81 @@ section.lazy-placeholder:after {
     padding-top: 1.5rem !important;
   }
 }
-.cid-t61aG6Huvz {
+.cid-t6729auRuj {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #000000;
+  background-color: #2e2e2e;
+}
+.cid-t6729auRuj .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-t6729auRuj .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-t6729auRuj .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-t6729auRuj .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-t6729auRuj .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-t6729auRuj .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-t6729auRuj .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-t6729auRuj .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-t6729auRuj .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-t6729auRuj .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-t6729auRuj .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-t6729auRuj .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-t6729auRuj .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-t6729auRuj .media-container-row .row-copirayt p {
+  width: 100%;
 }
