--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2623,6 +2623,7 @@ section.lazy-placeholder:after {
 .cid-t61bu9Mz0l .testimonial-text {
   font-style: italic;
   font-weight: 300;
+  text-align: left;
 }
 .cid-t61bu9Mz0l .mbr-author-name {
   font-weight: bold;
@@ -2650,6 +2651,7 @@ section.lazy-placeholder:after {
 .cid-t61bvjloVz .testimonial-text {
   font-style: italic;
   font-weight: 300;
+  text-align: center;
 }
 .cid-t61bvjloVz .mbr-author-name {
   font-weight: bold;
