--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2262,7 +2262,7 @@ section.lazy-placeholder:after {
 .cid-t61bvjloVz .testimonial-text {
   font-style: italic;
   font-weight: 300;
-  text-align: center;
+  text-align: left;
 }
 .cid-t61bvjloVz .mbr-author-name {
   font-weight: bold;
