--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap);
 
 
@@ -41,7 +42,7 @@ body {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 1.05rem;
   font-display: swap;
 }
@@ -547,7 +548,7 @@ a:hover {
   display: none;
 }
 .form-control {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 1.05rem;
   font-display: swap;
 }
@@ -1941,7 +1942,7 @@ section.lazy-placeholder:after {
 .cid-t6bAWRbGo8 {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/screen-shot-2022-05-14-at-7.25.56-pm-2000x1250.png");
+  background-image: url("../../../assets/images/screen-shot-2022-05-14-at-7.29.00-pm-2000x1250.png");
 }
 .cid-t6bAWRbGo8 .testimonial-text {
   font-style: italic;
