--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1821,7 +1821,7 @@ section.lazy-placeholder:after {
 }
 .cid-t6bAWOMNz4 .mbr-author-name {
   font-weight: bold;
-  color: #149dcc;
+  color: #ffffff;
 }
 .cid-t6bAWOMNz4 .media-container-row {
   word-wrap: break-word;
