--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1514,30 +1514,30 @@ section.lazy-placeholder:after {
 .cid-t6bAWLsoHj .mbr-overlay ~ .container-slide {
   z-index: auto;
 }
-.cid-t6bAWM6Ezp {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.cid-t6ftYU7y5j {
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-image: url("../../../assets/images/screen-shot-2022-05-14-at-9.04.59-pm-1805x756.png");
 }
-.cid-t6bAWM6Ezp .testimonial-text {
+.cid-t6ftYU7y5j .testimonial-text {
   font-style: italic;
   font-weight: 300;
 }
-.cid-t6bAWM6Ezp .mbr-author-name {
+.cid-t6ftYU7y5j .mbr-author-name {
   font-weight: bold;
 }
-.cid-t6bAWM6Ezp .media-container-row {
+.cid-t6ftYU7y5j .media-container-row {
   word-wrap: break-word;
   word-break: break-word;
 }
 @media (max-width: 991px) {
-  .cid-t6bAWM6Ezp .mbr-figure,
-  .cid-t6bAWM6Ezp img {
+  .cid-t6ftYU7y5j .mbr-figure,
+  .cid-t6ftYU7y5j img {
     max-height: 300px;
     width: auto;
     margin: auto;
   }
-  .cid-t6bAWM6Ezp .media-content {
+  .cid-t6ftYU7y5j .media-content {
     padding-top: 1.5rem !important;
   }
 }
