--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1284,10 +1284,10 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-t6gyBX5cjZ {
+.cid-t6gHlDfcGt {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #000000;
+  background-color: #2e2e2e;
 }
 .cid-t6guEBXxIx .modal-body .close {
   background: #1b1b1b;
@@ -1584,10 +1584,10 @@ section.lazy-placeholder:after {
     padding-top: 1.5rem !important;
   }
 }
-.cid-t6gyBX5cjZ {
+.cid-t6gHlDfcGt {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #000000;
+  background-color: #2e2e2e;
 }
 .cid-t6bROb33KW .navbar {
   padding: .5rem 0;
@@ -2649,10 +2649,10 @@ section.lazy-placeholder:after {
   padding-bottom: 135px;
   background-image: url("../../../assets/images/screen-shot-2022-05-14-at-7.25.56-pm-2000x1250.png");
 }
-.cid-t6gyBX5cjZ {
+.cid-t6gHlDfcGt {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #000000;
+  background-color: #2e2e2e;
 }
 .cid-t6bROb33KW .navbar {
   padding: .5rem 0;
@@ -3312,8 +3312,8 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-t6gyBX5cjZ {
+.cid-t6gHlDfcGt {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #000000;
+  background-color: #2e2e2e;
 }
